# lex4oat

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: rust.yml
src/: dfa.rs  lex4oat.rs  liblex4oat.rs  main.rs  nfa.rs  node.rs  oat.l
test/: 0.oat
